syntax = "proto3";
option go_package = "github.com/treeverse/lakefs/graveler";

import "google/protobuf/timestamp.proto";

package io.treeverse.lakefs.graveler;

enum RepositoryState {
  ACTIVE = 0;
  IN_DELETION = 1;
}

message RepositoryData {
  string id = 1;
  string storage_namespace = 2;
  string default_branch_id = 3;
  google.protobuf.Timestamp creation_date = 4;
  RepositoryState state = 5;
  string instance_uid = 6;
}

message BranchData {
  string id = 1;
  string commit_id = 2;
  string staging_token = 3;
  repeated string sealed_tokens = 4;
}

message TagData {
  string id = 1;
  string commit_id = 2;
}

message CommitData {
  string id = 1;
  string committer = 2;
  string message = 3;
  google.protobuf.Timestamp creation_date = 4;
  string meta_range_id = 5;
  map<string, string> metadata = 6;
  repeated string parents = 7;
  int32 version = 8;
  int32 generation = 9;
}

message GarbageCollectionRules {
  int32 default_retention_days = 1;
  map<string, int32> branch_retention_days = 2;
}

message GarbageCollectionRunMetadata {
  string run_id = 1;
  // Location of expired commits CSV file on object store
  string commits_csv_location = 2;
  // Location of where to write expired addresses on object store
  string address_location = 3;
  // Location of uncommitted objects parquet file on object store
  string uncommitted_location = 4;
}

enum BranchProtectionBlockedAction {
  STAGING_WRITE = 0;
  COMMIT = 1;
}

message BranchProtectionBlockedActions {
  repeated BranchProtectionBlockedAction value = 1;
}

message BranchProtectionRules {
  map<string, BranchProtectionBlockedActions> branch_pattern_to_blocked_actions = 1;
}

message StagedEntryData {
  bytes key = 1;
  bytes identity = 2;
  bytes data = 3;
}

// message data model to track address tokens
message LinkAddressData {
  // xid physical address that includes the creation date
  string address = 1;
}
