syntax = "proto3";
option go_package = "github.com/treeverse/lakefs/kv";

package io.treeverse.lakefs.kv;

// message data model for secondary index
message SecondaryIndex {
  bytes primary_key = 1;
}
